-
Bug
-
Resolution: Done
-
P2: Important
-
Qt Creator 4.11.0-rc1
-
macOS 10.15
-
53a4c6eda0649f59ec58da865457aa77d114cf83
When changing the sizes/order of the columns in the Locals and Expressions view then they are not remembered after restarting a debugging session.
| For Gerrit Dashboard: QTCREATORBUG-23341 | ||||||
|---|---|---|---|---|---|---|
| # | Subject | Branch | Project | Status | CR | V |
| 284169,3 | Debugger: Remember sizes and order of the columns in the debugger views | master | qt-creator/qt-creator | Status: MERGED | +2 | 0 |