src/plugins/debugger/debuggermainwindow.h
@@ -59,6 +59,20 @@ public:
     QPointer<QToolButton> m_toolButton;
 };
 
+class PerspectiveState
+{
+public:
+    static const char *savesHeaderKey();
+
+    QByteArray mainWindowState;
+    QVariantHash headerViewStates;
+
+    friend QDataStream &operator>>(QDataStream &ds, PerspectiveState &state)
+        { return ds >> state.mainWindowState >> state.headerViewStates; }
+    friend QDataStream &operator<<(QDataStream &ds, const PerspectiveState &state)
+        { return ds << state.mainWindowState << state.headerViewStates; }
+};
+
 class DEBUGGER_EXPORT Perspective : public QObject
 {
 public:
@@ -150,3 +164,5 @@ private:
 };
 
 } // Utils
+
+Q_DECLARE_METATYPE(Utils::PerspectiveState)
